Half done the hw4