@@ -1,8 +1,11 @@
 package hw4.puzzle;
 
+import java.lang.reflect.Array;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.Arrays;
+
 
 /**
  * Created by hug. See https://goo.gl/MVL8up for details on these puzzles.
@@ -32,13 +35,13 @@ public class CommonBugDetector {
         @Override
         public Iterable<WorldState> neighbors() {
             switch (name) {
-                case('s'): return createWorldStateList(List.of('a', 'x'));
-                case('a'): return createWorldStateList(List.of('b'));
-                case('b'): return createWorldStateList(List.of('c'));
-                case('c'): return createWorldStateList(List.of('d'));
-                case('d'): return createWorldStateList(List.of('e'));
-                case('e'): return createWorldStateList(List.of('g'));
-                case('x'): return createWorldStateList(List.of('c'));
+                case('s'): return createWorldStateList(Arrays.asList('a', 'x'));
+                case('a'): return createWorldStateList(Arrays.asList('b'));
+                case('b'): return createWorldStateList(Arrays.asList('c'));
+                case('c'): return createWorldStateList(Arrays.asList('d'));
+                case('d'): return createWorldStateList(Arrays.asList('e'));
+                case('e'): return createWorldStateList(Arrays.asList('g'));
+                case('x'): return createWorldStateList(Arrays.asList('c'));
                 default: return null;
             }
         }
